--- a/src/styles/components/CategoryItem.css
+++ b/src/styles/components/CategoryItem.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     margin-bottom: var(--space-medium);
+    align-items: center;
   }
   
   .category-container img {
