--- a/src/styles/pages/ProductPage.css
+++ b/src/styles/pages/ProductPage.css
@@ -17,10 +17,19 @@
   .product-page p,span {
     margin-bottom: var(--space-medium);
   }
+
+  .product-page span {
+    font-weight: bold;
+    font-size: 17px;;
+    text-align: center;
+  }
   
   @media (min-width: 750px) {
     .product-page img {
       height: 400px;
+    }
+    .product-page span {
+      font-size: 20px;;
     }
   }
   
