--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -2,9 +2,12 @@ button {
     height: 44px;
     min-width: 175px;
     background-color: var(--color-secondary);
+    border:none;
     color: var(--color-primary);
     border-radius: var(--border-radius);
     border-color: var(--color-secondary);
+    font-size: 15px;
+    cursor: pointer;
   }
 
   .button-secondary {
@@ -12,4 +15,5 @@ button {
     background: none;
     color: var(--color-secondary);
     border: none;
+    cursor: pointer;
   }
