--- a/src/styles/pages/AdminPage.css
+++ b/src/styles/pages/AdminPage.css
@@ -15,6 +15,15 @@ display: flex;
     margin-top: var(--space-ultra);
 }
 
+.admin-product-item {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--space-medium);
+    margin-top: var(--space-ultra);
+}
+
 
 .admin-form form {
     display: flex;
